--- a/c-sharp-express-source/WeatherMonitor.Worker/WeatherMonitor.Worker.csproj
+++ b/c-sharp-express-source/WeatherMonitor.Worker/WeatherMonitor.Worker.csproj
@@ -9,7 +9,6 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Services\" />
-    <Folder Include="Domain\" />
+    <ProjectReference Include="..\WeatherMonitor.Domain\WeatherMonitor.Domain.csproj" />
   </ItemGroup>
 </Project>
